test_suite/alan-2022-examples/failing/007070_mutation.alan
source Q7 begin put 63 while end
